C:\data\Analytics\Machine Learning\my git work\Machine_Learning_Python learning

--- a/Vectorization Basics.ipynb
+++ b/Vectorization Basics.ipynb
@@ -21,6 +21,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# dot() operator for matrix multiplication"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -73,6 +80,170 @@
    "source": [
     "print(a.shape)\n",
     "print(b.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Broadcasting example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  56.     0.     4.4   68. ]\n",
+      " [   1.2  104.    52.     8. ]\n",
+      " [   1.8  135.    99.     0.9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[56.0,0.0,4.4,68.0],[1.2,104.0,52.0,8.0],[1.8,135.0,99.0,0.9]])\n",
+    "print(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  59.   239.   155.4   76.9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cal = A.sum(axis=0)\n",
+    "print(cal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 94.91525424   0.           2.83140283  88.42652796]\n",
+      " [  2.03389831  43.51464435  33.46203346  10.40312094]\n",
+      " [  3.05084746  56.48535565  63.70656371   1.17035111]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "percentage = 100*A/cal.reshape(1,4)\n",
+    "print(percentage)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generate a five random gaussian variables & Understand Vector dimensions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "a = np.random.rand(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.50333545  0.26200909  0.14787376  0.06876887  0.88200998]\n",
+      "(5,)\n",
+      "1.12653274105\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a)\n",
+    "print(a.shape)\n",
+    "print(np.dot(a,a.T))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.41127627]\n",
+      " [ 0.7170398 ]\n",
+      " [ 0.77950263]\n",
+      " [ 0.62153846]\n",
+      " [ 0.20021156]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a= np.random.rand(5,1)\n",
+    "print(a)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.41127627  0.7170398   0.77950263  0.62153846  0.20021156]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a.T)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.16914817  0.29490146  0.32059093  0.25562402  0.08234226]\n",
+      " [ 0.29490146  0.51414608  0.55893441  0.44566782  0.14355966]\n",
+      " [ 0.32059093  0.55893441  0.60762435  0.48449087  0.15606544]\n",
+      " [ 0.25562402  0.44566782  0.48449087  0.38631006  0.12443919]\n",
+      " [ 0.08234226  0.14355966  0.15606544  0.12443919  0.04008467]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.dot(a,a.T))"
    ]
   },
   {
